# RNEA_cpp_6_Axis

./: .gitignore  CMakeLists.txt  README.md
include/: T_R_Mat_out.h
scr/: T_R_Mat_out.cpp
test/: test_main.cpp  test_pinocchio_rnea.cpp  test_rnea_forward.cpp
